tests/ui/fail_chained_system_instruction.stderr
error[E0599]: no method named `with_system_instruction` found for struct `InteractionBuilder<'_, Chained>` in the current scope
  --> tests/ui/fail_chained_system_instruction.rs:19:10
   |
14 |       let _builder = client
   |  ____________________-
15 | |         .interaction()
   | |          ------------- method `with_system_instruction` is available on `InteractionBuilder<'_>`
16 | |         .with_model("gemini-3-flash-preview")
   | |          ------------------------------------ method `with_system_instruction` is available on `InteractionBuilder<'_>`
17 | |         .with_text("Hello")
   | |          ------------------ method `with_system_instruction` is available on `InteractionBuilder<'_>`
18 | |         .with_previous_interaction("prev-id") // Transitions to Chained state
19 | |         .with_system_instruction("Be helpful"); // ERROR: method not found
   | |_________-^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a method `with_developer_instruction` with a similar name
   |
19 -         .with_system_instruction("Be helpful"); // ERROR: method not found
19 +         .with_developer_instruction("Be helpful"); // ERROR: method not found
   |
